raw-kubernetes/resources/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: op5-kube-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: quay.io/drsylent/cubix/block5v2/optional-backend:springboot3
        ports:
        - containerPort: 8080
          name: web
