raw-kubernetes/resources/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: op5-kube-backend
spec:
  ports:
  - name: web
    port: 8080
    targetPort: web
  selector:
    app: backend
