raw-kubernetes/resources/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: op5-kube-frontend
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
